--- a/index.html
+++ b/index.html
@@ -10,12 +10,22 @@
     <div class="container">
       	<!-- inizio prima riga -->
         <div class="row">
-
+          <!-- immagine tablet prima riga -->
+          <img src="img/tablet.jpg" alt="tablet">
+          <!-- immagine smartphone prima riga -->
+          <img src="img/smartphone.jpg" alt="smartphone">
+          <!-- immagine cuffie prima riga -->
+          <img src="img/cuffie.jpg" alt="cuffie">
         </div>
         <!-- fine prima riga -->
         <!-- inizio seconda riga -->
         <div class="row">
-
+          <!-- immagine tablet seconda riga -->
+          <img src="img/tablet.jpg" alt="tablet">
+          <!-- immagine smartphone seconda riga -->
+          <img src="img/smartphone.jpg" alt="smartphone">
+          <!-- immagine cuffie seconda riga -->
+          <img src="img/cuffie.jpg" alt="cuffie">
         </div>
         <!-- fine seconda riga -->
     </div>
