creazione span discount

--- a/index.html
+++ b/index.html
@@ -11,21 +11,39 @@
       	<!-- inizio prima riga -->
         <div class="row">
           <!-- immagine tablet prima riga -->
-          <img src="img/tablet.jpg" alt="tablet">
+          <div class="object">
+            <img src="img/tablet.jpg" alt="tablet">
+            <span class="discount">-30%</span>
+          </div>
           <!-- immagine smartphone prima riga -->
-          <img src="img/smartphone.jpg" alt="smartphone">
+          <div class="object">
+            <img src="img/smartphone.jpg" alt="smartphone">
+            <span class="discount">-15%</span>
+          </div>
           <!-- immagine cuffie prima riga -->
-          <img src="img/cuffie.jpg" alt="cuffie">
+          <div class="object">
+            <img src="img/cuffie.jpg" alt="cuffie">
+            <span class="discount">-30%</span>
+          </div>
         </div>
         <!-- fine prima riga -->
         <!-- inizio seconda riga -->
         <div class="row">
           <!-- immagine tablet seconda riga -->
-          <img src="img/tablet.jpg" alt="tablet">
+          <div class="object">
+            <img src="img/tablet.jpg" alt="tablet">
+            <span class="discount">-30%</span>
+          </div>
           <!-- immagine smartphone seconda riga -->
-          <img src="img/smartphone.jpg" alt="smartphone">
+          <div class="object">
+            <img src="img/smartphone.jpg" alt="smartphone">
+            <span class="discount">-15%</span>
+          </div>
           <!-- immagine cuffie seconda riga -->
-          <img src="img/cuffie.jpg" alt="cuffie">
+          <div class="object">
+            <img src="img/cuffie.jpg" alt="cuffie">
+            <span class="discount">-30%</span>
+          </div>
         </div>
         <!-- fine seconda riga -->
     </div>
