--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
           <div class="object">
             <img src="img/tablet.jpg" alt="tablet">
             <span class="discount">-30%</span>
+            <div class="heart">&hearts;</div>
           </div>
           <!-- immagine smartphone prima riga -->
           <div class="object">
             <img src="img/smartphone.jpg" alt="smartphone">
             <span class="discount">-15%</span>
+            <div class="heart">&hearts;</div>
           </div>
           <!-- immagine cuffie prima riga -->
           <div class="object">
             <img src="img/cuffie.jpg" alt="cuffie">
             <span class="discount">-30%</span>
+            <div class="heart">&hearts;</div>
           </div>
         </div>
         <!-- fine prima riga -->
@@ -33,16 +36,19 @@
           <div class="object">
             <img src="img/tablet.jpg" alt="tablet">
             <span class="discount">-30%</span>
+            <div class="heart">&hearts;</div>
           </div>
           <!-- immagine smartphone seconda riga -->
           <div class="object">
             <img src="img/smartphone.jpg" alt="smartphone">
             <span class="discount">-15%</span>
+            <div class="heart">&hearts;</div>
           </div>
           <!-- immagine cuffie seconda riga -->
           <div class="object">
             <img src="img/cuffie.jpg" alt="cuffie">
             <span class="discount">-30%</span>
+            <div class="heart">&hearts;</div>
           </div>
         </div>
         <!-- fine seconda riga -->
