--- a/bonus/index-bonus.html
+++ b/bonus/index-bonus.html
@@ -60,5 +60,10 @@
         <!-- fine seconda riga -->
     </div>
     <!-- fine contenitore -->
+    <!-- inizio piè di pagina -->
+    <footer>
+      Made with &hearts; by Sabrina
+    </footer>
+    <!-- fine piè di pagina -->
   </body>
 </html>
