esercizio bonus completo

--- a/bonus/index-bonus.html
+++ b/bonus/index-bonus.html
@@ -20,19 +20,28 @@
           <div class="object">
             <img src="../img/tablet.jpg" alt="tablet">
             <span class="discount">-30%</span>
-            <div class="heart">&hearts;</div>
+            <div class="over-object">
+              <div class="heart">&hearts;</div>
+              <div class="carrello">aggiungi al carrello</div>
+            </div>
           </div>
           <!-- immagine smartphone prima riga -->
           <div class="object">
             <img src="../img/smartphone.jpg" alt="smartphone">
             <span class="discount">-15%</span>
-            <div class="heart">&hearts;</div>
+            <div class="over-object">
+              <div class="heart">&hearts;</div>
+              <div class="carrello">aggiungi al carrello</div>
+            </div>
           </div>
           <!-- immagine cuffie prima riga -->
           <div class="object">
             <img src="../img/cuffie.jpg" alt="cuffie">
             <span class="discount">-30%</span>
-            <div class="heart">&hearts;</div>
+            <div class="over-object">
+              <div class="heart">&hearts;</div>
+              <div class="carrello">aggiungi al carrello</div>
+            </div>
           </div>
         </div>
         <!-- fine prima riga -->
@@ -42,19 +51,28 @@
           <div class="object">
             <img src="../img/tablet.jpg" alt="tablet">
             <span class="discount">-30%</span>
-            <div class="heart">&hearts;</div>
+            <div class="over-object">
+              <div class="heart">&hearts;</div>
+              <div class="carrello">aggiungi al carrello</div>
+            </div>
           </div>
           <!-- immagine smartphone seconda riga -->
           <div class="object">
             <img src="../img/smartphone.jpg" alt="smartphone">
             <span class="discount">-15%</span>
-            <div class="heart">&hearts;</div>
+            <div class="over-object">
+              <div class="heart">&hearts;</div>
+              <div class="carrello">aggiungi al carrello</div>
+            </div>
           </div>
           <!-- immagine cuffie seconda riga -->
           <div class="object">
             <img src="../img/cuffie.jpg" alt="cuffie">
             <span class="discount">-30%</span>
-            <div class="heart">&hearts;</div>
+            <div class="over-object">
+              <div class="heart">&hearts;</div>
+              <div class="carrello">aggiungi al carrello</div>
+            </div>
           </div>
         </div>
         <!-- fine seconda riga -->
